# grocery_agent

./: .gitignore  README.md  main.py  pyproject.toml  server.py  test_api.py  test_ors.py
agent/: agent.py  loop.py  prompts.py  state.py  tools.py
config/: settings.py
data/: dishes.json  mock_distance_matrix.json  mock_prices.json  mock_stores.json  promos.json
data/price_cache/: aldi_greenfield.json  trader_joes_shadyside.json
scripts/: agent_chain_demo.py  chat.py  eval_recommendations.py  live_probe.py  realistic_chat.py  refresh_promos.py  self_test.py  sync_mock_from_cache.py  test_pipeline.py  test_pork_tj.py  test_recommend.py
tests/: conftest.py  test_agent_loop.py  test_confirm_routing.py  test_dish_flow.py  test_dish_resolver.py  test_geocode.py  test_integration.py  test_intent_router.py  test_preferences.py  test_price_cache.py  test_price_optimizer.py  test_product_search.py  test_promos.py  test_recommend_intent.py  test_recommender.py  test_route_planner.py  test_synonyms.py  test_tools.py  test_trader_joes_scraper.py
tools/: dish_resolver.py  errand_runner.py  geocode.py  intent_classifier.py  list_ops.py  price_cache.py  price_optimizer.py  price_scraper.py  product_search.py  promos.py  recommender.py  refresh_prices.py  route_planner.py  synonyms.py
tools/scrapers/: aldi.py  giant_eagle.py  target.py  trader_joes.py
web/: index.html
